<resources>
    <string name="app_name">String Along</string>
    <string name="instrument_spinner_title">Instrument</string>
    <string name="tuning_spinner_title">Tuning</string>

    <string name="notes_file_name">csv/notes.csv</string>
    <string name="tuning_file_name">csv/tunings.csv</string>
    <string name="chords_file_name">csv/chords.csv</string>
    <string name="badges_file_name">csv/badges.csv</string>

    <string name="tightenText">Tighten this string!</string>
    <string name="inTuneText">In Tune!</string>
    <string name="loosenText">Loosen this string!</string>
    <string name="playPromptText">Play a string!</string>
    <string name="standard_tuning">Standard Tuning</string>
    <string name="sound_intune">sounds/correct.mp3</string>
    <string name="tuner_tab">Tuner</string>
    <string name="learn_tab">Tools</string>

    <string-array name="instrument_spinner_array">
        <item>Guitar</item>
        <item>Bass</item>
        <item>Ukulele</item>
    </string-array>

    <string-array name="tab_string_notes">
        <item>e</item>
        <item>B</item>
        <item>G</item>
        <item>D</item>
        <item>A</item>
        <item>E</item>
    </string-array>

    <string-array name="learning_options_array">
        <item>Guitar Tuner</item>
        <item>Chords</item>
        <item>Scales/Tabs</item>
        <item>Note Playback</item>
        <item>Note Recognition</item>
        <item>Metronome</item>
    </string-array>

    <string-array name="learning_descriptions_array">
        <item>Tune your guitar using your device\'s microphone</item>
        <item>See chord diagrams</item>
        <item>Learn to read guitar tabs and play guitar scales</item>
        <item>Play requested notes to test your knowledge of the fretboard</item>
        <item>Test your note recognition skills with this little game</item>
        <item>Use a metronome to practice playing to the rhythm</item>
    </string-array>

    <string-array name="root_notes_array">
        <item>A</item>
        <item>A#/Bb</item>
        <item>B</item>
        <item>C</item>
        <item>C#/Db</item>
        <item>D</item>
        <item>D#/Eb</item>
        <item>E</item>
        <item>F</item>
        <item>F#/Gb</item>
        <item>G</item>
        <item>G#/Ab</item>
    </string-array>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_activity_main">String Along</string>
    <string name="title_activity_chords">Chords</string>
    <string name="title_activity_tab">Tabs</string>
    <string name="chord_root_spinner_title">Root Note</string>
    <string name="chord_spinner_title">Chord</string>
    <string name="start_fret_label">Fret:</string>
    <string name="tab_spinner_title">Scale</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_list_tab">Scales</string>
    <string name="tab_learn_tab">Tab Help</string>
    <string name="tab_neck_tab">Notes</string>
    <string name="autoscroll_off">Off</string>
    <string name="autoscroll_slow">Slow</string>
    <string name="autoscroll_medium">Medium</string>
    <string name="autoscroll_fast">Fast</string>
    <string name="tab_listen_title">Live Feedback</string>
    <string name="tab_autoscroll_title">Autoscroll</string>
    <string name="metronome_switch">Toggle Metronome</string>
    <string name="bpm_title">Tempo</string>
    <string name="beats_title">Beats Per Measure</string>
    <string name="permissions_denial_message">This app uses the microphone to detect the notes you are playing on your guitar. If you deny the sound recording permission you can still use this app, but the functionality will be limited.</string>
    <string name="button_option_one">One</string>
    <string name="button_option_two">Two</string>
    <string name="button_option_three">Three</string>
    <string name="button_option_four">Four</string>
    <string name="description_for_play_pause_button">Play/Pause button for Note Recognition</string>
    <string name="default_score_text">N/A</string>
    <string name="settings">Settings</string>
    <string name="about">About This App</string>
    <string name="nav_header_description">An app to help guitarists of any level</string>
    <string name="nav_header_title">String Along</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="badge_tab">Achievements</string>
    <string name="score_title">Score</string>
    <string name="total_title">Question</string>
    <string name="stats_file_name">csv/stats.csv</string>

    <string name="rec_score_key">rec_score</string>
    <string name="rep_score_key">rep_score</string>
    <string name="rec_total_key">rec_total</string>
    <string name="rep_total_key">rep_total</string>
    <string name="scale_spinner_title">Scale</string>
    <string name="playback_note_prompt">Please play the following note:</string>
    <string name="button_next">Next Question</string>
    <string name="home">Home</string>
    <string name="about_app_title">About This App</string>
    <string name="about_app_body">This app was created as part of my final year project in Aberystwyth University. This app aims to help people to learn to play guitar, with tools to help improve the skills of any level guitarist. The app uses mostly original code, but there are some attributions I would like to make.</string>
    <string name="about_attribution_title">Attributions</string>
    <string name="attribution_body">TarsosDSP (pitch detection):\nhttps://github.com/JorenSix/TarsosDSP\n\nGuitarChordView (displays guitar chords):\nhttps://github.com/Airsaid/ChordView\n\nList of chords found here:\nhttps://github.com/ap1/chordPractice/blob/master/chords2.csv\n\nApp Icon adapted from icon by itim2101 on:\nhttps://www.flaticon.com/\n\nApache License, Version 2.0:\nhttps://www.apache.org/licenses/LICENSE-2.0\n\nASCII Tab Notation Symbols from Wikipedia:\nhttps://en.wikipedia.org/wiki/ASCII_tab\n\nNotes and Frequencies by MTU:\nhttp://pages.mtu.edu/~suits/notefreqs.html

    </string>
    <string name="leave_game_activity">Are you sure you want to leave this screen? Any points you have scored will be lost.</string>
    <string name="start_tuner">Start Tuner</string>
    <string name="permission_alert_title">Permission Required</string>
    <string name="permission_alert_message">There are some features of this app that require permission to use your microphone. This permission is currently not granted, and will need to be granted from the Settings on your device.</string>
    <string name="correct_note_text">\u2713</string>
    <string name="incorrect_note_text">X</string>
    <string name="sound_incorrect">sounds/incorrect.wav</string>
    <string name="final_score_title">Game Finished</string>
    <string name="final_score_first">You scored:</string>
    <string name="title_activity_tuning">Tuner</string>
    <string name="title_activity_tabs_scales">Tabs and Scales</string>
    <string name="tuner">Tuner</string>
    <string name="learn">Learning Tools</string>
    <string name="title_activity_about">About This App</string>
    <string name="please_play">Play</string>
    <string name="resume_game">Resume Game</string>
    <string name="toast_game_quit">Game quit due to leaving activity</string>
    <string name="clear_game_data">Are you sure you want to clear all note game data? Any achievements you have will be lost.</string>


</resources>
