<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.aber.dcs.cs39440.les35.guitartutorapp.ui.NoteRecognitionActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <include
            android:id="@+id/toolbar"
            layout="@layout/tool_bar"
            app:elevation="0dp" />


    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/play_pause_button"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:contentDescription="@string/description_for_play_pause_button"
        android:src="@drawable/ic_play_circle_outline_black_24dp"
        app:layout_constraintBottom_toTopOf="@id/button_table"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <TextView
        android:id="@+id/score"
        android:textSize="36sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_score_text"
        app:layout_constraintTop_toBottomOf="@id/play_pause_button"
        app:layout_constraintBottom_toTopOf="@id/button_table"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TableLayout
        android:id="@+id/button_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_pause_button">

        <TableRow>

            <Button
                android:id="@+id/button_option_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginEnd="8dp"
                android:text="@string/button_option_one" />

            <Button
                android:id="@+id/button_option_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/button_option_two" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_option_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginEnd="8dp"
                android:text="@string/button_option_three" />

            <Button
                android:id="@+id/button_option_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/button_option_four" />
        </TableRow>
    </TableLayout>


</android.support.constraint.ConstraintLayout>
