<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.aber.dcs.cs39440.les35.guitartutorapp.ui.NotePlaybackActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <include
            android:id="@+id/toolbar"
            layout="@layout/tool_bar"
            app:elevation="0dp" />


    </android.support.design.widget.AppBarLayout>

    <TableLayout
        android:id="@+id/score_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toTopOf="@id/playback_prompt_note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:id="@+id/score_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/score_title"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/total_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/total_title"
                android:textAlignment="center" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/default_score_text"
                android:textAlignment="center"
                android:textSize="36sp" />


            <TextView
                android:id="@+id/total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/default_score_text"
                android:textAlignment="center"
                android:textSize="36sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/playback_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playback_note_prompt"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_table"
        app:layout_constraintBottom_toTopOf="@id/playback_prompt_note"/>

    <TextView
        android:id="@+id/playback_prompt_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="112sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playback_prompt"
        app:layout_constraintBottom_toTopOf="@id/button_next"
        android:text="@string/default_score_text"/>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playback_prompt_note" />

</android.support.constraint.ConstraintLayout>
