<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorWhite">

    <android.support.constraint.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="uk.ac.aber.dcs.cs39440.les35.guitartutorapp.ui.AboutActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <include
                android:id="@+id/toolbar"
                layout="@layout/tool_bar"
                app:elevation="0dp" />


        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite">

                <TextView
                    android:id="@+id/about_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/about_app_title"
                    android:textSize="24sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/about_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/about_app_body"
                    app:layout_constraintTop_toBottomOf="@id/about_title" />

                <TextView
                    android:id="@+id/about_attributions_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/about_attribution_title"
                    android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@id/about_body" />

                <TextView
                    android:id="@+id/attribution_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/attribution_body"
                    app:layout_constraintTop_toBottomOf="@id/about_attributions_title" />
            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>