<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.aber.dcs.cs39440.les35.guitartutorapp.ui.MetronomeActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <include
            android:id="@+id/toolbar"
            layout="@layout/tool_bar"
            app:elevation="0dp" />


    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/switch_metronome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metronome_switch"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_beat" />

        <Switch
            android:id="@+id/switch_metronome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            app:layout_constraintLeft_toLeftOf="@id/switch_metronome_title"
            app:layout_constraintRight_toRightOf="@id/switch_metronome_title"
            app:layout_constraintTop_toBottomOf="@id/switch_metronome_title" />

        <TextView
            android:id="@+id/bpm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="24dp"
            android:text="@string/bpm_title"
            app:layout_constraintLeft_toLeftOf="@id/bpm_picker"
            app:layout_constraintRight_toRightOf="@id/bpm_picker"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/beats_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="24dp"
            android:text="@string/beats_title"
            app:layout_constraintLeft_toLeftOf="@id/beat_picker"
            app:layout_constraintRight_toRightOf="@id/beat_picker"
            app:layout_constraintTop_toTopOf="parent" />

        <NumberPicker
            android:id="@+id/bpm_picker"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:theme="@style/DefaultNumberPickerTheme"
            app:layout_constraintBottom_toTopOf="@id/current_beat"
            app:layout_constraintLeft_toRightOf="@id/beat_picker"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bpm_title" />

        <NumberPicker
            android:id="@+id/beat_picker"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:theme="@style/DefaultNumberPickerTheme"
            app:layout_constraintBottom_toTopOf="@id/current_beat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/bpm_picker"
            app:layout_constraintTop_toBottomOf="@+id/beats_title" />

        <TextView
            android:id="@+id/current_beat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="144sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
